<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:id="@+id/emer_subjectTextView"
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="70dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:imeOptions="actionNext"
        android:hint="@string/emergency_subject"
        />

    <EditText
        android:id="@+id/emer_descTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="8"
        android:gravity="top|left"
        android:padding="20dp"
        android:hint="@string/emergency_description"
        android:inputType="textMultiLine" />

    <Button
        android:layout_gravity="center_horizontal"
        android:text="@string/emergency_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="emergencySubmit" />

</LinearLayout>