<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="seg.user.interface3125.thehominator.repair_request">

    <TextView
        android:id="@+id/t1"
        android:text="@string/repair_main_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:textColor="#000000" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_below="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/repair_array"
        android:prompt="@string/repair_prompt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner1"
        android:id="@+id/fixed1"
        android:orientation="vertical"
        android:visibility="invisible"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please specify the affected areas"
            android:id="@+id/textView"
            android:textSize="20sp"
            android:textColor="#000000" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kitchen"
            android:id="@+id/checkBox"
            android:textSize="18sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bathroom"
            android:id="@+id/checkBox2"
            android:textSize="18sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Half Bathroom"
            android:id="@+id/checkBox3"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please provide further information in the field below"
            android:id="@+id/textView2"
            android:textSize="20sp"
            android:textColor="#000000"
            android:paddingTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/editText"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fixed2"
        android:orientation="vertical"
        android:layout_alignTop="@id/fixed1"
        android:layout_alignBottom="@id/fixed1"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:paddingTop="10dp"
        android:layout_height="30dp">

        <TextView
            android:text="Please specify the nature of the problem below."
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:inputType="textMultiLine" />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_below="@+id/fixed1"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fixed1"
        android:text="@string/repair_submit_request"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>


</RelativeLayout>
